--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -18,11 +18,6 @@
   },
   "homepage": "https://github.com/rat9615/simple-nodejs-app#readme",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^4.17.3",
-    "node-fetch": "^2.6.7",
-    "nodemon": "^2.0.20",
-    "request": "^2.88.2",
-    "wiki-infobox-parser": "^0.1.11"
+    "mocha": "^10.0.0" 
   }
 }
