--- a/deploy.yml
+++ b/deploy.yml
@@ -1,6 +1,6 @@
 ---
 - name: Deploy Node.js Application
-  hosts: app_servers   # Referring to the app_servers group defined in the inventory file
+  hosts: local   # Referring to the app_servers group defined in the inventory file
   become: yes
   vars:
     app_dir: "/var/www/simple-nodejs-app"
