--- a/deploy.yml
+++ b/deploy.yml
@@ -8,33 +8,6 @@
     repo_url: "https://github.com/rhdixit2001/simple-nodejs-app.git"
     branch: "main"
   tasks:
-    - name: Clone the repository
-      git:
-        repo: "{{ repo_url }}"
-        dest: "{{ app_dir }}"
-        version: "{{ branch }}"
-        force: yes
-    - name: Install npm dependencies
-      command: npm install
-      args:
-        chdir: "{{ app_dir }}"
-    - name: Install pm2 globally
-      npm:
-        name: pm2
-        global: yes
-    - name: Start the Node.js application using pm2
-      command: pm2 start app.js --name "simple-nodejs-app"
-      args:
-        chdir: "{{ app_dir }}"
-    - name: Save pm2 process list
-      command: pm2 save
-
-    - name: Set up pm2 to start on reboot
-      command: pm2 startup systemd
-
-    - name: Enable pm2 to start on boot
-      systemd:
-        name: pm2-{{ pm2_user }}
-        enabled: yes
-        state: started
-        daemon_reload: yes
+    - name: Print Hello World
+      debug:
+        msg: "Hello, World!"
