--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha --recursive"
+    "test": "mocha./Dev/test/**/*.js"
   },
   "repository": {
     "type": "git",
